# binary-parsers

./: .travis.yml  ChangeLog.md  README.md  binary-parsers.cabal
Data/Binary/: Parser.hs
Data/Binary/Parser/: Char8.hs  Numeric.hs  Word8.hs
bench/: Aeson.hs  AesonBP.hs  Bench.hs  HttpReq.hs
tests/: AesonBP.hs  JSON.hs  QC.hs
tests/QC/: ByteString.hs  Combinator.hs  Common.hs
