name:                binary-parsers
version:             0.2.2.0
synopsis:            Extends binary with parsec/attoparsec style parsing combinators.
description:         Extends binary with parsec/attoparsec style parsing combinators.
license:             BSD3
license-file:        LICENSE
author:              Winterland
maintainer:          drkoster@qq.com
copyright:           (c) 2016 Winterland       
category:            Data
build-type:          Simple
extra-source-files:    ChangeLog.md
                     , README.md
                     , bench/json-data/*.json
                     , tests/json-data/*.json
                     , bench/http-request.txt

cabal-version:       >=1.10
homepage:            https://github.com/winterland1989/binary-parsers
bug-reports:         https://github.com/winterland1989/binary-parsers/issues

source-repository head
  type:     git
  location: git://github.com/winterland1989/binary-parsers.git

library
    exposed-modules:    Data.Binary.Parser
                    ,   Data.Binary.Parser.Word8
                    ,   Data.Binary.Parser.Char8
                    ,   Data.Binary.Parser.Numeric

    build-depends:      base == 4.*
                    ,   bytestring == 0.10.*
                    ,   binary == 0.8.*
                    ,   bytestring-lexing == 0.5.*
                    ,   scientific > 0.3

    default-language:    Haskell2010
    ghc-options:      -Wall

benchmark criterion
    other-modules:       Aeson
                    ,    AesonBP
                    ,    Common
                    ,    HttpReq
                    ,    Network.Wai.Handler.Warp.ReadInt
                    ,    Network.Wai.Handler.Warp.RequestHeader

    build-depends:      base
                    ,   deepseq
                    ,   bytestring
                    ,   binary-parsers
                    ,   binary
                    ,   attoparsec
                    ,   criterion == 1.1.*
                    ,   scientific
                    ,   text
                    ,   vector
                    ,   directory
                    ,   filepath
                    ,   unordered-containers
                    ,   http-types
                    ,   case-insensitive
                    ,   scanner

    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0
    ghc-options:      -O2


test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests .
  main-is:        Main.hs
  other-modules:  QC.ByteString
                , QC.Combinator
                , QC.Common
                , Aeson
                , AesonBP
                , JSON

  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts

  build-depends:    base >= 4 && < 5
                ,   deepseq
                ,   bytestring
                ,   bytestring-lexing
                ,   binary
                ,   QuickCheck >= 2.7
                ,   quickcheck-unicode
                ,   scientific
                ,   tasty >= 0.11
                ,   tasty-quickcheck >= 0.8
                ,   tasty-hunit >= 0.8
                ,   quickcheck-instances >= 0.3
                ,   attoparsec
                ,   scientific
                ,   text
                ,   vector
                ,   directory
                ,   filepath
                ,   unordered-containers

  if !impl(ghc >= 8.0)
    -- Data.Semigroup && Control.Monad.Fail are available in base-4.9+
    build-depends: fail == 4.9.*,
                   semigroups >=0.16.1 && <0.19
